# school

./: .gitignore  .gitmodules  time_test.py
MATLAB/Math671/: hw3.m  hw3_b.m  prob2_sol.m
MATLAB/Robotics/: compute_robot_path.m  exam1.m  hw1.m  hw2.m  hw3_2b.m  hw3_2e.m  hw4.m  hw4_solution.m  hw5.m  hw6.m  hw6_2.m  hw7.m  hw8_1.m  lab1_2.m
MATLAB/Robotics/HW6/: hw6_3b.m  myfun.m  p560_startup_script.m  sl_puma_hw6_2017.slx
MSD/: application_rls.py  msdController.py  msdDynamics.py  msdParam.py  msdParamHW7.py  msdSim.py
MSD/HW10/: msdController.py
MSD/HW11/: msdController.py  msdParamHW11.py
MSD/HW12/: msdController.py  msdSim.py
MSD/HW13/: msdController.py  msdParamHW13.py
MSD/HW7/: application_rls.py  msdParam.py  msdParamHW7.py  msdSim.py  rls_example.py
Vision_Based_Boat_Landing/: main.tex  refs.bib
autonomous_systems/: .env  angle.py  data_helper.py  ekf_hw2.py  hw1.py  hw2.py  params.py  plot_hw2.py  plotter.py  setup.cfg  turtlebot.py
autonomous_systems/hw1/: hw1.py
autonomous_systems/hw3/: main.py  old_ekf.py  params.py  plotter.py  turtlebot.py  ukf_b.py  ukf_filter.py  utils.py
autonomous_systems/hw4/: main4.py  mcl_filter.py
autonomous_systems/turtlebot_sim/: .env  loadmat_data.py  main2.rs  params.py  plotter.py  shared.py  turtlebot.py  utils.py
autonomous_systems/turtlebot_sim/.pytype/: build.ninja
autonomous_systems/turtlebot_sim/bb/: .gitignore  hw1.py  hw1_auv.py  hw1_auv_linear.py  hw1_kf.py  hw2.py  hw2_anim_plot.py  hw2_ekf.py  hw2_tbot.py  hw3.py  hw3_ukf.py  lmd.py
autonomous_systems/turtlebot_sim/hw1/: hw1_loaddata.py
autonomous_systems/turtlebot_sim/hw3/: main3.py  ukf_filter.py
autonomous_systems/turtlebot_sim/hw4/: main4.py  mcl_filter.py  params.py
autonomous_systems/turtlebot_sim/hw5/: main5.py  og_mapping.py  params.py  turtlebot_app.py  turtlebot_item.py
autonomous_systems/turtlebot_sim/hw6/: eif_filter.py  ekf_slam.py  main6.py  params.py
autonomous_systems/turtlebot_sim/hw6_gpu/: ekf_slam.py  params.py
autonomous_systems/turtlebot_sim/hw7/: fast_slam.py  main7.py  params.py
autonomous_systems/turtlebot_sim/hw7_gpu/: params.py
autonomous_systems/turtlebot_sim/hw8/: main8.py  mdp.py  og_mapping.py  params.py  turtlebot_app.py
autonomous_systems/turtlebot_sim/hw9/: main9.py  outline_pomdp.m  params.py  pomdp.py  pomdp_hm.py
autonomous_systems/turtlebot_sim/hw9_rust/: Cargo.toml
autonomous_systems/turtlebot_sim/hw9_rust/src/: lib.rs  main.rs  main2.rs  test.rs
autonomous_systems/turtlebot_sim/midterm/: eif_filter.py  main3.py  main_midterm.py  params.py  plotter_midterm.py  utils.py
ee671/: exam2_4.py  exam2_4e.py  hw7_2.py  hw7_4.py  hw7_55.py  hw8_test.py  hw9_15.py  rls_project.py
ee671/ece671-jupyter/: t16_recursive_least_squares.ipynb
flight_dynamics/: mavsim_chap2.py
flight_dynamics/chap2/: mav_viewer.py  video_writer.py
flight_dynamics/chap3/: mav_dynamics.py
flight_dynamics/parameters/: simulation_parameters.py
lie_groups/Appendices/: A-Attitude-Representations.ipynb
lie_groups/Unit-1-SO2/: 1.1-Notation-and-Kinematics.ipynb  1.3-Solving-Differential-Equations.ipynb
me537/: HW5.ipynb  HW6.ipynb  HW7.ipynb  HW8.ipynb  hw1.odt  hw3.odt  hw6.m  notebook.tex
old/240/fmc/: FMC-Task-Sizes.txt
old/240/fmcLogin/: Client.java  DownloadTask.java  HttpClient.java  LoginHelpSession.txt  MainActivity (1).java
old/240/fms/: DBTables.ods  createtables.txt  fms.sh  passoff-tips.txt
old/312/hw2/: modexp.py
old/312/hw3/: gcd.py  rsa.py
old/312/proj1-primality-test/: Proj1GUI.py  fermat.py
old/312/proj2-convex-hull/: Proj2GUI.py  convex_hull.py
old/312/proj3-network-routing/: CS312Graph.py  NetworkRoutingSolver.py  Proj3GUI.py  Untitled 2.ods  minheap.py  unsortedarray.py
old/312/proj4-gene-seq-alignment/: GeneSequencing.py  (+1 more)
old/ee671/: Exam2_3.ipynb  Exam2_4.ipynb  HW10.ipynb  HW7.ipynb  HW9_15.ipynb  exam1.py  exam2.py  hw10_14-15.py  hw4.py  hw7_5.py  hw8_22.py
professional_writing/: prof_writing_concision_page.odt
research/: past_reports.odt  progress-m.odt  report_20-2-10.md  seth_progress_20-feb.md  seth_progress_20-feb.odt  seth_progress_20-feb.txt
robotic_vision/: diff_activate.py
robotic_vision/.hw1cpp/: live_video.cpp
robotic_vision/1/: task2.py  task3.py
robotic_vision/2/: task1.py  task2.py  task3.py  task5.py  task6.py  webcam_param.yaml  writeup.odt
robotic_vision/3/: .~lock.writeup.odt#  RTEF.pkl  left_cam.pkl  left_cam.yaml  left_cam_params.txt  mat_task1.py  mat_task2.py  mat_task4.py  rectification_params.txt  right_cam.pkl  right_cam.yaml  right_cam_params.txt  stereo_params.txt  task1_camcalibrate.py  task2_stereocalib_read.py  task2_stereocalib_write.py  task2_stereocalibrate.py  task3_epipolar.py  task4_rectify.py  writeup.odt
robotic_vision/4/: .~lock.writeup.odt#  3dmeasure  3dmeasure.cpp  CMakeLists.txt  left_cam.yaml  right_cam.yaml  stereo.yaml  task1.py  task1_3dmeasure.py  writeup.odt
robotic_vision/4/include/: estimate_trajectory.h
robotic_vision/4/params/: right_cam.yaml
robotic_vision/4/python/: trajectory_estimator.py
robotic_vision/4/src/: 3dmeasure.cpp  estimate_trajectory.cpp  estimate_trajectory_solo.cpp  test.cpp  tracking.cpp
robotic_vision/5/: CMakeLists.txt  writeup5.odt
robotic_vision/5/src/: brendon.cpp  feature_matching.cpp  multiframe_tracking.cpp  optical_flow.cpp
robotic_vision/5/submission/: feature_matching.cpp  multiframe_tracking.cpp  optical_flow.cpp
robotic_vision/6/: CMakeLists.txt  Camera_Parameters.yaml  cam_mat.yaml  guess_params.yaml  writeup6.odt
robotic_vision/7/: CMakeLists.txt  unknown_vel.cpp  writeup7.odt
robotic_vision/7/params/: sfm_params.txt
robotic_vision/7/python/: plotter.py
robotic_vision/7/src/: b_task1.cpp  task1.cpp  unknown_vel.cpp
robotic_vision/7/submission/: CMakeLists.txt  plotter.py  task1.cpp  task2.cpp  task3.cpp
robotic_vision/hw1/: CMakeLists.txt  feature_detect.cpp
robotic_vision/hw1_py/: baseball.avi  feature_4.avi
robotic_vision/hw2/: camera_param.yaml  clibrate.py  data_points.txt  distortion.py  task1.py  task4.py  writeup.odt
(+203 files in other folders)
