[package]
name = "hw9_rust"
version = "0.1.0"
authors = ["Seth Nielsen <sethmnielsen@gmail.com>"]
edition = "2018"
autobins = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# name = "pomdp_lib"
# path = "src/lib.rs"

# [[bin]]
# name = "main"
# path = "src/main.rs"

[dependencies]
ndarray = { version = "0.13", features = ["blas", "rayon"] }
blas-src = { version = "0.2", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.6.0", default-features = false, features = ["cblas", "system"] }

ndarray-stats = "0.3"
noisy_float = "0.1"
itertools="0.8"

[dev-dependencies]
criterion = "0.3"

[[bench]]
# path = "./benches"
name = "pomdp_benchmark"
harness = false